Made Css and added extra html

--- a/nj-polymers.html
+++ b/nj-polymers.html
@@ -4,6 +4,15 @@
     <title>NJ Polymers</title>
   </head>
   <body>
-<h1>NJ Polymers<h1/>
+<h1>NJ Polymers</h1>
+<h2> Who are we?</h2>
+<p> We are a recycling company based in Doseley, Telford. We specialise in recycling all thermoplastic polymers and Cardboard</p>
+
+<h2>What are polymers</h2>
+<p> A polymer is substance which has a molecular structure built up chiefly or completely from a large number of similar units bonded together</p>
+
+<h2> What is recycling</h2>
+<p> Recycling is the process of recovering scrap or waste products and reprocessing the material into usefuk products<p>
   </body>
+<img src="https://www.huberpm.com/Uploads/Blog/plastic%20recycling_636032246920960325.jpeg" alt="picture of different plastics">
 </html>
