--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>NJ Polymers</title>
   </head>
   <body>
+    <img src="Logo-updated.png" alt="NJ polymers logo">
 <h1>NJ Polymers</h1>
 <h2> Who are we?</h2>
 <p> We are a recycling company based in Doseley, Telford. We specialise in recycling all thermoplastic polymers and Cardboard</p>
